# fin_advisor

./: Makefile  pyproject.toml
src/pipeline-training/: train.py
src/train/: train.py
src/utils/: log_memory.py
