[tool.poetry]
name = "fin-advisor"
version = "0.1.0"
description = ""
authors = ["Alexander Klokov <alexander.klokov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"
psutil = "^5.9.8"
torch = "^2.2.0"
numpy = "^1.26.4"
datasets = "^2.16.1"
transformers = "^4.37.2"
evaluate = "^0.4.1"
accelerate = "^0.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
